--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <h2>Assecories</h2>
 
             <ul class="todo">
-                <li>item 1-  Bread</li>
+                <li>item 1-  Bread
+                    
+                </li>
                 <li>item 2-   cheese slice</li>
                 <li>item 3- vegetables-as u like</li>
                 <li>item 4 -meonies</li>
@@ -45,12 +47,25 @@
         <article id="done">
             <h2>Done</h2>
             <ul class="done">
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
-                <li>item 4</li>
-                <li>item 5</li>
-                <li>item 6</li>
+                <li>item 1
+                    <input type="checkbox"><span>yo</span>
+                </li>
+                <li>item 2
+                    <input type="checkbox"><span>yo</span>
+                </li>
+                <li>item 3
+                    <input type="checkbox">
+                </li>
+                <li>item 4
+                    <input type="checkbox">
+                </li>
+
+                <li>item 5
+                    <input type="checkbox">
+                </li>
+                <li>item 6
+                    <input type="checkbox">
+                </li>
             </ul>
         </article>
     </main>
