adding header and foter

--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
 <body> 
     <header>
         <h1 class="hidden">Working with Cascade</h1>
-        <img src="images/logo6.webp" alt="peaky_blinder_logo" id="main-logo">
+        <img src="images/lo.jpg" alt="peaky_blinder_logo" id="main-logo">
+        <nav>
+        <ul>
+            <li>menu</li>
+            <li>contact</li>
+            <li>meals</li>
+            <li>more</li>
+        </ul>
+        </nav>
     </header>
     <main>
        
         
         <article id="todo">
-            <h2>Assecories</h2>
+            <h2>Ingridients</h2>
 
             <ul class="todo">
                 <li>item 1-  Bread
@@ -48,26 +56,31 @@
             <h2>Done</h2>
             <ul class="done">
                 <li>item 1
-                    <input type="checkbox"><span>yo</span>
+                    <input type="checkbox"><span></span>
                 </li>
                 <li>item 2
-                    <input type="checkbox"><span>yo</span>
+                    <input type="checkbox"><span>complete</span>
                 </li>
                 <li>item 3
-                    <input type="checkbox">
+                    <input type="checkbox"><span>complete</span>
                 </li>
                 <li>item 4
-                    <input type="checkbox">
+                    <input type="checkbox"><span>complete</span>
                 </li>
 
                 <li>item 5
-                    <input type="checkbox">
+                    <input type="checkbox"><span>complete</span>
                 </li>
                 <li>item 6
-                    <input type="checkbox">
+                    <input type="checkbox"><span>complete</span>
                 </li>
             </ul>
         </article>
     </main>
+
+    <footer class="sticky_footer">
+        <h2> BEST GRILLED SANDWICH RECIPE</h2>
+        by mama cooks
+    </footer>
 </body>
 </html>
