--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body> 
     <header>
         <h1 class="hidden">Working with Cascade</h1>
-        <img src="images/lo.jpg" alt="peaky_blinder_logo" id="main-logo">
+        <img src="images/logo.jpg" alt="peaky_blinder_logo" id="main-logo">
         <nav>
         <ul>
             <li>menu</li>
