--- a/index.html
+++ b/index.html
@@ -54,13 +54,23 @@
             <h2>Making steps</h2>
             <ul class="inprogress">
                 <li> 1.Two slices of bread
+                    <input type="checkbox"><span> done</span>
                
                 </li>
-                <li> 2.one chese slices b/w bread </li>
-                <li> 3.cuting into dices</li>
-                <li> 4.mixing with diced vegetables</li>
-                <li>5.put oil in it  </li>
-                <li> 6.assembling everything </li>
+                <li> 2.Chese slice b/w bread 
+                    <input type="checkbox"><span> done</span>
+                </li>
+                <li> 3.cuting into dices
+                    <input type="checkbox"><span> done</span>
+                </li>
+                <li> 4.mix with diced vegies
+                    <input type="checkbox"><span> done</span>
+                </li>
+                <li>5.put oil in it  
+                    <input type="checkbox"><span> done</span>
+                </li>
+                <li> 6.assembling everything
+                    <input type="checkbox"><span> done</span> </li>
             </ul>
         </article>
 
